[gd_scene load_steps=3 format=3 uid="uid://ciqamm8ido684"]

[ext_resource type="Script" uid="uid://elhvn0loxws6" path="res://game/items/item_stack_icon/item_stack_icon.gd" id="1_tl8by"]

[sub_resource type="LabelSettings" id="LabelSettings_iog6m"]
font_size = 8

[node name="ItemStackIcon" type="Control"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_tl8by")

[node name="IconSprite" type="Sprite2D" parent="."]
centered = false

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -12.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_iog6m")
